feat :implement analytics overview response and other dtos